src/app/components/pages/clinical/clinical.component.css
.search-jumbo {
    border-bottom: 1px solid lightgray;
}
mat-sidenav {
    width: 220px;
    box-shadow: 3px 0 6px rgba(0, 0, 0, .24);
}

.query-search{
    display:block;
    padding-left: 20px;
    padding-bottom: 20px;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 15px;
    font-weight: 400;
    word-wrap:break-word;
}

#query-header{
    padding-left: 10px;
}

.mat-list, .mat-nav-list, .mat-selection-list {
    padding-top: 0px;
}

